<resources>
    <string name="app_name">Let\'s meet for a game</string>
    <string name="username">Username</string>
    <string name="find_events">Find events</string>
    <string name="rating_bar">Rating bar</string>
    <string name="expand_friends">Expand friends</string>
    <string name="events_nearby">Events nearby</string>
    <string name="friends">Friends</string>
    <string name="areas_of_interest">Areas of interest</string>
    <string name="find_friends">Find friends</string>
    <string name="rank_points">Rank points/Rank points for next rank</string>
    <string name="my_events">My events</string>
    <string name="rank">Rank</string>
    <string name="user_description">User description:</string>
    <string name="enter_a_location">Enter a location</string>
    <string name="edit_profile">Edit profile</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="location">Location:</string>
    <string name="friend_requests">Friend requests</string>
    <string name="my_messages">My messages</string>
    <string name="organizer_rank">Organizer rank</string>
    <string name="event_name">Event name:</string>
    <string name="create_event">Create event</string>
    <string name="event_type">Event type:</string>
    <string name="players">Players</string>
    <string name="number_of_players">Number of players:</string>
    <string name="organizer_playing">Organizer playing</string>
    <string name="choose_location">Choose location</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose time</string>
    <string name="public_event">Public</string>
    <string name="outdoor">Outdoor</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="minimum_level">Minimum level:</string>
    <string name="choose_an_activity_category">Choose event type</string>
    <string name="area_of_interest">Area of interest</string>
    <string name="add_area_of_interest">Add area of interest</string>
    <string name="level">Level</string>
    <string name="level_points">Level points/Level points for next level</string>
    <string name="organizer">Organizer</string>
    <string name="rate_event">Rate event</string>
    <string name="area_of_interest_already_added">Area of interest already added</string>
    <string name="write_success">DocumentSnapshot successfully written!</string>
    <string name="write_failed">Error writing document</string>
    <string name="remove_area_of_interest">Remove area of interest</string>
    <string name="area_of_interest_not_present">Area of interest not present</string>
    <string name="image_upload_finished">Image upload finished</string>
    <string name="image_upload_started">Image upload started</string>
    <string name="go_back_upload">You can\'t go back while the image is uploading.</string>
    <string name="my_profile">My profile</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="long_app_name">Let\'s meet for a game</string>
    <string name="update_password">Update password</string>
    <string name="no_user_username">No user with username.</string>
    <string name="multiple_username">Multiple users with username.</string>
    <string name="password_incorrect">Password incorrect.</string>
    <string name="username_taken">Username taken, pick another.</string>
    <string name="logged_in">Logged in!</string>
    <string name="password_short">Password must have at least one character.</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="already_sent">Friend request already sent.</string>
    <string name="send_message">Send message</string>
    <string name="friends_with_self">You can\'t become friends with yourself.</string>
    <string name="visiting_myself">You can\'t visit your profile.</string>
    <string name="already_friends">You are already friends with this user.</string>
    <string name="event_description">Event description:</string>
    <string name="friend_request_sent">Friend request sent.</string>
    <string name="no_longer_friends">You are no longer friends.</string>
    <string name="friend_request_declined">Friend request declined.</string>
    <string name="friend_request_accepted">Friend request accepted.</string>
    <string name="notifications">Notifications</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="created_event">Created event!</string>
    <string name="updated_event">Updated event</string>
    <string name="initial_minimum_level">0</string>
    <string name="enter_search_value">Enter search value.</string>
    <string name="latest_message">Latest message</string>
    <string name="enter_message">Enter message.</string>
    <string name="choose_duration">Choose duration</string>
    <string name="duration">Duration</string>
    <string name="choose_start_date">Choose start date</string>
    <string name="choose_start_time">Choose start time</string>
    <string name="choose_end_time">Choose end time</string>
    <string name="choose_end_date">Choose end date</string>
    <string name="organizer_edit">Only organizer can edit event.</string>
    <string name="enter_event_name">Enter event name.</string>
    <string name="enter_organizer_name">Enter organizer name.</string>
    <string name="event_start">Event start:</string>
    <string name="event_end">Event end:</string>
    <string name="private_event">Private event</string>
    <string name="indoor">Indoor</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="marker_latitude">Marker latitude</string>
    <string name="marker_longitude">Marker longitude</string>
    <string name="waiting_location">Waiting for new location</string>
    <string name="setting_location">Setting new marker location…</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="enter_latitude">Enter latitude</string>
    <string name="marker_location">Marker location</string>
    <string name="confirm_location">Confirm location</string>
    <string name="level_low">Your level is not high enough to participate.</string>
    <string name="too_many">Too many participants.</string>
    <string name="create_profile">Create profile</string>
    <string name="enter_a_username_to_search">Enter a username to search.</string>
    <string name="delete_message">Do you want to delete this message?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted_by_sender">Deleted by sender.</string>
    <string name="player">Player</string>
    <string name="enter_search_radius">Enter search radius (km).</string>
    <string name="results">Results</string>
    <string name="my_friends">My friends</string>
    <string name="my_areas_of_interest">My areas of interest</string>
    <string name="begin_past">Event can\'t begin in the past.</string>
    <string name="end_before_beginning">Event can\'t end before beginning.</string>
    <string name="end_past">Event can\'t end in the past.</string>
    <string name="no_connection">Internet connection lost!</string>
    <string-array name="event_types">
        <item>skiing</item>
        <item>hiking</item>
        <item>ice skating</item>
        <item>kayaking</item>
        <item>kitesurfing</item>
        <item>nordic walking</item>
        <item>paragliding</item>
        <item>biking</item>
        <item>roller skating</item>
        <item>rowing</item>
        <item>sailing</item>
        <item>scuba diving</item>
        <item>yoga</item>
        <item>skateboarding</item>
        <item>sledding</item>
        <item>snowboarding</item>
        <item>baseball</item>
        <item>basketball</item>
        <item>cricket</item>
        <item>esports</item>
        <item>football</item>
        <item>golf</item>
        <item>gymnastics</item>
        <item>handball</item>
        <item>hockey</item>
        <item>kabaddi</item>
        <item>martial arts</item>
        <item>MMA</item>
        <item>motorsports</item>
        <item>rugby</item>
        <item>soccer</item>
        <item>tennis</item>
        <item>volleyball</item>
        <item>dice games</item>
        <item>card games</item>
        <item>tabletop games</item>
        <item>poker</item>
        <item>other</item>
    </string-array>
    <string-array name="event_types_translated">
        <item>skiing</item>
        <item>hiking</item>
        <item>ice skating</item>
        <item>kayaking</item>
        <item>kitesurfing</item>
        <item>nordic walking</item>
        <item>paragliding</item>
        <item>biking</item>
        <item>roller skating</item>
        <item>rowing</item>
        <item>sailing</item>
        <item>scuba diving</item>
        <item>yoga</item>
        <item>skateboarding</item>
        <item>sledding</item>
        <item>snowboarding</item>
        <item>baseball</item>
        <item>basketball</item>
        <item>cricket</item>
        <item>esports</item>
        <item>football</item>
        <item>golf</item>
        <item>gymnastics</item>
        <item>handball</item>
        <item>hockey</item>
        <item>kabaddi</item>
        <item>martial arts</item>
        <item>MMA</item>
        <item>motorsports</item>
        <item>rugby</item>
        <item>soccer</item>
        <item>tennis</item>
        <item>volleyball</item>
        <item>dice games</item>
        <item>card games</item>
        <item>tabletop games</item>
        <item>poker</item>
        <item>other</item>
    </string-array>
    <string-array name="friend_search_params">
        <item>areas of interest</item>
        <item>description</item>
        <item>location</item>
        <item>username</item>
    </string-array>
    <string-array name="friend_sort_params">
        <item>rank</item>
        <item>username</item>
    </string-array>
    <string-array name="event_search_params">
        <item>event type</item>
        <item>event name</item>
        <item>description</item>
    </string-array>
    <string-array name="event_sort_params">
        <item>start time</item>
        <item>event type</item>
        <item>event name</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="added_areas_of_interest">Added areas of interest</string>
    <string name="expand_areas_of_interest">Expand areas of interest</string>
    <string name="expand_added_areas_of_interest">Expand added areas of interest</string>
    <string name="expand_not_added_areas_of_interest">Expand new areas of interest</string>
    <string name="not_added_areas_of_interest">New areas of interest</string>
    <string name="filter_by_event_name">Event name</string>
    <string name="filter_by_event_type">Event type</string>
    <string name="filter_by_organizer">Organizer</string>
    <string name="expand_subscriber">Expand subscriber</string>
    <string name="subscriber">Subscriber</string>
    <string name="user_areas_of_interest">User\'s areas of interest</string>
    <string name="user_friends">User\'s friends</string>
    <string name="events_organizer">Events that I organized</string>
    <string name="notifications_only">Notifications only</string>
    <string name="choose_theme">Choose theme</string>
    <string name="logout">Log out</string>
    <string name="open_drawer">Open drawer</string>
    <string name="no_results">No results.</string>
    <string name="turn_off_images">Turn images on and off</string>
    <string name="upcoming">Upcoming</string>
    <string name="current">Current</string>
    <string name="past">Past</string>
</resources>