<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/list_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:textSize="21sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:text="@string/upcoming" />

        <com.google.android.material.chip.Chip
            android:id="@+id/current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/current" />

        <com.google.android.material.chip.Chip
            android:id="@+id/past"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/past">

        </com.google.android.material.chip.Chip>
    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/onlyShowNotificationToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="5dp"
        android:text="@string/notifications_only"
        android:textSize="21sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_baseline_notifications_24"
        app:drawableTint="@color/teal_700" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/noResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/no_results"
        android:textSize="21sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>
