<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



            <TextView
                android:id="@+id/textViewEventName"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="21sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:background="@drawable/gradient"
                android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                android:textColor="@color/white"
                android:text="@string/event_name" />

            <EditText
                android:id="@+id/editTextEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:minHeight="48dp"
                android:inputType="textPersonName"
                android:text="@string/event_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:id="@+id/textViewEvenType"
                android:padding="5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="21sp"
                android:textStyle="bold"
                android:background="@drawable/gradient"
                android:drawableStart="@drawable/ic_baseline_list_alt_24"
                android:textColor="@color/white"
                android:text="@string/event_type" />

            <Spinner
                android:id="@+id/sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/choose_an_activity_category"
                android:minHeight="48dp" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMinimumLevel"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="21sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/gradient"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_baseline_workspace_premium_24"
                android:text="@string/minimum_level" />
            <EditText
                android:id="@+id/editTextMinimumLevel"
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:minHeight="48dp"
                android:inputType="number"
                android:text="@string/minimum_level" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:gravity="center"
            android:id="@+id/switchPublic"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="21sp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:padding="5dp"
            android:background="@drawable/gradient"
            android:textColor="@color/white"
            android:text="@string/public_event" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:drawableStart="@drawable/ic_baseline_nature_people_24"
            android:id="@+id/switchOutdoor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="21sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:background="@drawable/gradient"
            android:textColor="@color/white"
            android:text="@string/outdoor" />
    </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:gravity="center"
            android:id="@+id/switchOrganizerPlaying"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_baseline_plus_one_24"
            android:textSize="21sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:background="@drawable/gradient"
            android:textColor="@color/white"
            android:text="@string/organizer_playing" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewPlayers"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_weight="1"
            android:background="@drawable/gradient"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_reduce_capacity_24"
            android:text="@string/players" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/range_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/players"
            app:values="@array/initial_slider_values"
            android:valueFrom="0.0"
            android:valueTo="100.0" />
    </LinearLayout>



        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/floatingActionButtonChooseDate"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="10dp"
                    android:clickable="true"
                    android:contentDescription="@string/my_events"
                    android:focusable="true"
                    android:background="@drawable/gradient"
                    app:srcCompat="@drawable/ic_baseline_event_24" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/textViewChooseDate"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_date" />
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/floatingActionButtonChooseTime"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="10dp"
                    android:clickable="true"
                    android:contentDescription="@string/my_events"
                    android:focusable="true"
                    android:background="@drawable/gradient"
                    app:srcCompat="@drawable/ic_baseline_access_time_24" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/textViewChooseTime"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_time" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/floatingActionButtonChooseLocation"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="10dp"
                    android:clickable="true"
                    android:contentDescription="@string/my_events"
                    android:focusable="true"
                    android:background="@drawable/gradient"
                    app:srcCompat="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:id="@+id/textViewChooseLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="textPostalAddress"
                    android:text="@string/choose_location" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <TextView
                    android:gravity="center"
                    android:id="@+id/buttonApply"
                    android:layout_width="96dp"
                    android:layout_height="48dp"
                    android:clickable="true"
                    android:contentDescription="@string/apply"
                    android:focusable="true"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:background="@drawable/gradient"
                    android:textColor="@color/white"
                    android:text="@string/apply" />

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <TextView
                    android:gravity="center"
                    android:id="@+id/buttonDiscard"
                    android:layout_width="96dp"
                    android:layout_height="48dp"
                    android:clickable="true"
                    android:contentDescription="@string/cancel"
                    android:focusable="true"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:background="@drawable/gradient"
                    android:textColor="@color/white"
                    android:text="@string/cancel" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>