<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:text="@string/area_of_interest" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewLevel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:textColor="@color/purple_500"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:textSize="21sp"
            android:text="@string/level"
            app:drawableTopCompat="@drawable/ic_baseline_emoji_events_24" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLevelPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/level_points" />

            <ProgressBar
                android:id="@+id/determinateBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="75"
                android:progressBackgroundTint="@color/blue_gray_100"
                android:progressTint="@color/purple_500" />

        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:src="@drawable/ic_baseline_cancel_24">
        </ImageView>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>